--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a-entity camera></a-entity>
     <a-entity position="0 0 0">
       <a-box position="0 0.5 0" material="color: yellow;"></a-box>
-      <a-entity gltf-model="url(c:\victor\proyectoARjs/fire_extinguisher_-_medium_size.glb)" scale="0.5 0.5 0.5"></a-entity>
+      <a-entity gltf-model="url(https://github.com/Viktor-2021/testAr/blob/master/fire_extinguisher_medium_size.glb)" scale="0.5 0.5 0.5"></a-entity>
     </a-entity>
   </a-scene>
 </body>
