--- a/index.html
+++ b/index.html
@@ -18,7 +18,60 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'UA-64519506-1');
 </script>
+<title>&lt;model-viewer&gt; example</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="stylesheet" href="demo-styles.css" />
+
+    <!-- The following libraries and polyfills are recommended to maximize browser support -->
+    <!-- NOTE: you must adjust the paths as appropriate for your project -->
+
+    <!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
+    <script
+      src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js"
+      defer
+    ></script>
+
+	<body>
+    <div id="card">
+      <!-- All you need to put beautiful, interactive 3D content on your site: -->
+      <model-viewer
+        src="https://cdn.glitch.global/5e8cfdd4-cf72-4223-b38f-dbf013c1def9/acid__bomber_masked__skibidi_toilet.glb?v=1720799469097"
+        ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/miles_morales_spiderman.glb?v=1569545377878"
+        poster="https://cdn.glitch.global/5e8cfdd4-cf72-4223-b38f-dbf013c1def9/poster.webp?v=1720796197592"
+        alt="A 3D model of a sofa"
+        shadow-intensity="1"
+        camera-controls
+        
+        ar
+      >
+      </model-viewer>
+      <section class="attribution">
+        <span>
+          <h1>SOFA</h1>
+        </span>
+      </section>
+    </div>
+
+    <!--<footer>
+    <span>This page is a basic demo of the <a href="https://github.com/GoogleWebComponents/model-viewer" target="_blank">&lt;model-viewer&gt;</a> web component.</span>
+    <span>It makes displaying 3D and AR content on the web easy ✌️</span>
+    <a href="https://glitch.com/edit/#!/remix/model-viewer">
+      <img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Fremix%402x.png?1513093958726" alt="remix button" aria-label="remix" height="33">
+    </a>
+  </footer>
+  
+  
+  <!-- 💁 Include both scripts below to support all browsers! -->
+
+    <!-- Loads <model-viewer> for modern browsers: -->
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+    ></script>
+  </body>
     
 <!-- Google tag (gtag.js) Version analytics 4-->
 <script async="" src="./MESA DE CENTRO CONTA GRIS S_files/js(1)"></script>
