--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="https://cdn.glitch.global/5e8cfdd4-cf72-4223-b38f-dbf013c1def9/acid__bomber_masked__skibidi_toilet.glb?v=1720799469097"
+        src="https://github.com/Viktor-2021/testAr/blob/master/sofa.glb"
         ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/miles_morales_spiderman.glb?v=1569545377878"
         poster="https://cdn.glitch.global/5e8cfdd4-cf72-4223-b38f-dbf013c1def9/poster.webp?v=1720796197592"
         alt="A 3D model of a sofa"
