--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <model-viewer
         src="https://github.com/Viktor-2021/testAr/blob/master/sofa.glb"
         ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/miles_morales_spiderman.glb?v=1569545377878"
-        poster="https://cdn.glitch.global/5e8cfdd4-cf72-4223-b38f-dbf013c1def9/poster.webp?v=1720796197592"
+        poster="https://github.com/Viktor-2021/testAr/blob/master/poster.webp"
         alt="A 3D model of a sofa"
         shadow-intensity="1"
         camera-controls
